--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <link rel="icon" href="assets/logo.png" />
-    <title>Horizon Security</title>
+    <title>Gestion Voyage</title>
 
-    <meta name="description" content="Horizon Security" />
+    <meta name="description" content="Gestion Voyage" />
 
     <meta
       property="og:url"
-      content="https://justboil.github.io/Horizon-admin/"
+      content="https://justboil.github.io/Gestion Voyage-admin/"
     />
     <meta property="og:site_name" content="JustBoil.me" />
-    <meta property="og:title" content="Horizon" />
-    <meta property="og:description" content="Horizon Security " />
+    <meta property="og:title" content="Gestion Voyage" />
+    <meta property="og:description" content="Gestion Voyage " />
     <meta property="og:image" content="assets/logo.png" />
     <meta property="og:image:type" content="image/png" />
     <meta property="og:image:width" content="1920" />
     <meta property="og:image:height" content="960" />
 
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:title" content="Horizon" />
-    <meta property="twitter:description" content="Horizon Security" />
+    <meta property="twitter:title" content="Gestion Voyage" />
+    <meta property="twitter:description" content="Gestion Voyage" />
     <meta property="twitter:image:src" content="assets/logo.png" />
     <meta property="twitter:image:width" content="1920" />
     <meta property="twitter:image:height" content="960" />
